--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vigilant-guacamole",
-  "version": "0.0.1",
-  "description": "WIP hex processor for betaflight",
-  "bugs": "https://github.com/Docteh/vigilant-guacamole",
+  "version": "0.0.2",
+  "description": "WIP hex file processor for betaflight",
+  "bugs": "https://github.com/Docteh/vigilant-guacamole/issues",
   "bin": "hex.js",
   "dependencies": {
     "minimist": "^1.2.0",
